--- a/app/static/style.css
+++ b/app/static/style.css
@@ -131,55 +131,8 @@ nav footer{
     animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
 
-canvas {
-    width: 500px;
-    height: 200px;
-    font-size: 50px;
-    margin: 10px;
-    padding: 8px;
-    background-color: #505050;
-    border-radius: 10px;
-}
 
-@media screen and (max-width:1000px) {
-    body {
-        flex-direction: column;
-    }
 
-    nav {
-        width: 100%;
-        text-align: center;
-        align-content: center;
-        height: auto;
-        min-height: auto;
-        min-width: 100%;
-    }
-
-    nav .logo {
-        background-color: white;
-        display: flex;
-        width: 10%;
-        height: auto;
-        border-radius: 50%;
-        padding: 10px;
-        justify-self: center;
-    }
-    nav footer{
-        position: relative;
-        max-width: 100%;
-        width: 100%;
-        text-align: center;
-    }
-    canvas{
-        width: auto;
-    }
-    .card{
-        padding : auto;
-    }
-    .graphique
-    { width: 100%;}
-
-}
 
 .history-card {
     margin-top: 20px;
@@ -240,7 +193,14 @@ thead{
 }
 
 .graphique{
-    border-radius: 10px;    
+    width: 60vw;
+}
+
+.graphique canvas {
+    width: 100%;
+    height: 100%;
+    font-size: 50px;
+    border-radius: 10px;
 }
 .sensors{
     background-color: #505050;
@@ -740,3 +700,44 @@ nav .logo {
     backdrop-filter: blur(8px);
 }
 
+@media screen and (max-width:1000px) {
+    body {
+        flex-direction: column;
+    }
+
+    nav {
+        width: 100vw;
+        text-align: center;
+        align-content: center;
+        height: auto;
+        min-height: auto;
+        min-width: 100%;
+        border-radius: 0px 0px 10px 10px;
+    }
+
+    nav .logo {
+        background-color: white;
+        display: flex;
+        width: 10%;
+        height: auto;
+        border-radius: 50%;
+        padding: 10px;
+        justify-self: center;
+    }
+    nav footer{
+        position:initial;
+        max-width:100vw;
+        min-width: 100vw;
+        text-align: center;
+    }
+    canvas{
+        width: 100%;
+    }
+    .card{
+        padding : auto;
+    }
+    .graphique{
+        width: 90vw;
+    }
+
+}
