--- a/app/static/style.css
+++ b/app/static/style.css
@@ -201,6 +201,7 @@ thead{
     height: 100%;
     font-size: 50px;
     border-radius: 10px;
+    background-color: #b4dff8;
 }
 .sensors{
     background-color: #505050;
