--- a/app/templates/statistical.html
+++ b/app/templates/statistical.html
@@ -12,7 +12,7 @@
 <body onload="">
     <!--side bar-->
     <nav>
-        <img src="static\icone.png" alt="icone" id="logo" class="logo">
+        <img src="static/icone.png" alt="icone" id="logo" class="logo">
         <header>
             <hr>
             <a href="/"><h2>Home</h2></a>
