--- a/app/templates/history.html
+++ b/app/templates/history.html
@@ -18,9 +18,9 @@
             <a href="/"><h2>Home</h2></a>
             <hr>
             <ul>
-                <li><a href="/">datas</a></li>
-                <li><a href="about">about</a></li>
-                <li><a href="statistical">statistical</a></li>
+                <li><a href="/">Datas</a></li>
+                <li><a href="about">About</a></li>
+                <li><a href="statistical">Statistical</a></li>
                 <li><a href="history">History</a></li>
             </ul>
             <hr>
