--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,9 +21,9 @@
             <hr>
             <ul>
                 <li><a href="/">Datas</a></li>
-                <li><a href="about">about</a></li>
-                <li><a href="statistical">statistical</a></li>
-                <li><a href="history">history</a></li>
+                <li><a href="about">About</a></li>
+                <li><a href="statistical">Statistical</a></li>
+                <li><a href="history">History</a></li>
             </ul>
             <hr>
             <ul>
