--- a/app/templates/statistical.html
+++ b/app/templates/statistical.html
@@ -41,6 +41,7 @@
             <select name="date" id="date">
                 <option value="today" selected>Today</option>
             </select>
+            <input type="number" name="limit" id="limit" value="20">
             <input type="button" value="Refresh" id="refresh_btn">
 
         <div class="content">
